Corrected ACTION_TAKEN event publication in Game